[package]
name = "oxidoist"
version = "0.1.0"
authors = ["Christopher Leggett <chris@leggett.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
oxidoist-api = { path = "../oxidoist-api" }
tokio = { version = "1", features = ["full"] }
